Mil/lib/McxAPI.h

// UserCode Options
#define MIL_STD_1553_AND_PP194										0x0000			
#define H009														0x0001			
#define MultiRT														0x0002	
#define MIL_STD_1553												0x0004	
#define EBR_1553													0x0008
#define DIGIBUS_F16													0x0016

//Arinc429
//typedef struct mcxA429ChannelInformation
//{
//    /// The size in bytes of this structure.
//    /// Caller must set this field to sizeof(stla429ChannelInformationStructure).
//    /// This is to prevent buffer overwrite when compilers are incompatible or definitions change.
//    U32BIT  dwStructureSize;
//    U32BIT dwUserTag;        // Arbitrary user provided value
//    union {
//        struct /*characteristics*/ {
//           U32BIT channelIsAvailable : 1;    // true = available for use
//           U32BIT channelRunning : 1;        // true = running, false = not running
//           U32BIT channelFailure : 1;        // true = failure detected
//           U32BIT channelIsTX : 1;           // true = configured as TX, false = as RX
//           U32BIT channelIsHighSpeed : 1;    // true = configured for high speed, else low speed
//           U32BIT channelSupportsTX : 1;     // true = can be configured as TX
//           U32BIT channelSupportsRX : 1;     // true = can be configured as RX
//           U32BIT channelSupportsHighSpeed : 1;  // true = can be configured for high speed
//           U32BIT channelSupportsLowSpeed : 1;   // true = can be configured for low speed
//        };
//        U32BIT  dwFlags; // above struct as integer
//    };
//    U32BIT  dwTransferSize;   // Size of transfer buffer required for bulk RX
//    U32BIT  dwCardNumber;     // Card number on which channel is located
//    U32BIT  dwReserved1;      // Padding
//} mcx_A429ChannelInfo;

typedef struct mcxMsgStruct
{
	U16BIT cmd;			// command to be send or recieve
	U16BIT cmd2;		// 2nd command in case of RT to RT, should be transmite command.
	U16BIT* data;		// data of the command
	U16BIT dataSize;	// data size
	U16BIT* BSW;		// bit status word
	U16BIT* rtStatus;	// return status from RT
	U16BIT* rtStatus2;	// return status from 2nd RT in case of RT to RT
	bool emulateRt;		// emulate rt flag
}mcx_MsgStruct;



// Following bits are same for TX and RX modes:
#define MCX_A429_CFG_HIGH_RATE          0x0001  ///< Data rate: 100 KHz
#define MCX_A429_CFG_LOW_RATE           0x0000  ///< Data rate: 12.5 KHz
#define MCX_A429_CFG_MASK_RATE          0x0001
#define MCX_A429_CFG_PARITY_NONE        0x0000  ///< Data parity: none. MSB can be used as data.
#define MCX_A429_CFG_PARITY_EVEN        0x0002  ///< Data parity: even
#define MCX_A429_CFG_PARITY_ODD         0x0006  ///< Data parity: odd
#define MCX_A429_CFG_MASK_PARITY        0x0006  //   Mask for parity bits
// NOTE - the following 32 bits constants are relevant for PCI (PMC Tester). 
#define MCX_A429_NUMBER_OF_WORDS_MASK   0x00FF0000  //   Number of words in FIFO mask - Bits 16-23
#define MCX_A429_FIFO_FULL		        0x01000000  //   FIFO full
#define MCX_A429_FIFO_EMPTY		        0x02000000  //   FIFO empty
#define MCX_A429_RX_LABEL_TABLE_READY	0x04000000  //   Labels table ready

// Following bits apply only for RX mode:
#define MCX_A429_CFG_RX_LABEL_MATCH     0x0008  ///< enable label matching
#define MCX_A429_CFG_MASK_RX_LABELS     0x0008
#define MCX_A429_CFG_RX_DECODER_ENABLE  0x0010
#define MCX_A429_CFG_RX_DECODER_DISABLE 0x0000
#define MCX_A429_CFG_MASK_RX_DECODER    0x0070

#define MCX_A429_CARD_DISABLE_INTERNAL_LOOPBACK          0x00000000  // sets the card to disable internal loopback, external Arinc429 Tx Rx data is accepted
#define MCX_A429_CARD_ENABLE_INTERNAL_LOOPBACK           0x00000001  // sets the card to enable internal loopback, external Arinc429 Tx Rx data is not accepted

extern S16BIT mcx_Initialize (U16BIT deviceId, U16BIT protocol);

extern S16BIT mcx_ReloadHW(U16BIT deviceId, U16BIT protocol);

extern S16BIT mcx_Read(U16BIT deviceId, U16BIT address, WORD bufferSize, WORD* buffer);

extern S16BIT mcx_Write(U16BIT deviceId, U16BIT address, WORD bufferSize, WORD* buffer);

extern S16BIT mcx_Create_BusList (U16BIT deviceId, U16BIT busList);

extern S16BIT mcx_Create_BusList_Element (U16BIT deviceId, U16BIT element, U16BIT command, U16BIT options, U16BIT Command2, U16BIT StatusWord1, U16BIT StatusWord2);

extern S16BIT mcx_Create_BusList_Element1 (U16BIT deviceId, U16BIT element, U16BIT command, U16BIT options);

extern S16BIT mcx_Create_Element_DataBlock (U16BIT deviceId, U16BIT dataBlock, U16BIT dataBlockMode, U16BIT* buffer, U16BIT bufferSize);

extern S16BIT mcx_Map_DataBlock_To_Element (U16BIT deviceId, U16BIT element, U16BIT dataBlock);

extern S16BIT mcx_Map_Element_To_BusList (U16BIT deviceId, U16BIT busList, U16BIT element);

extern S16BIT mcx_Start (U16BIT deviceId, U16BIT busList, U16BIT numberOfIterations);

extern S16BIT mcx_EnableRts (U16BIT deviceId, U32BIT rtsVector);
 
extern S16BIT mcx_GetDescriptors(U16BIT deviceId, S8BIT* deviceName, S8BIT* deviceManufacturer, S8BIT* deviceFirmware, S8BIT* deviceSerial);

extern S16BIT mcx_DevicePassiveTimeStarted(U16BIT deviceId, U16BIT* isFirstPassive);

extern S16BIT mcx_Stop (U16BIT deviceId);

extern S16BIT mcx_Stop2 (U16BIT deviceId);

extern S16BIT mcx_EnableRius(U16BIT deviceId, U16BIT riusVector);

extern S16BIT mcx_Get_Element_Results(U16BIT deviceId, U16BIT busList, U16BIT elementIndex, U16BIT* blockStatusWord, WORD* buffer, U16BIT bufferSize, U16BIT* status1, U16BIT* status2, U16BIT* tag);

extern S16BIT mcx_Element_DataBlock_Read (U16BIT deviceId, U16BIT wDataBlock, U16BIT* buffer, U16BIT bufferSize);
 
extern S16BIT mcx_SetFpgaFileDirectory (U16BIT deviceId, S8BIT* fpgaFileDir);

extern S16BIT mcx_SetFrameTime(U16BIT deviceId, U32BIT microSeconds);

extern S16BIT mcx_MapDevices(U16BIT* numberOfDevices);

extern S16BIT mcx_Free (U16BIT deviceId);

extern S16BIT mcx_FreeBusList (U16BIT deviceId, U16BIT busList);

extern S16BIT mcx_Get_Version (U16BIT deviceId, U16BIT* version);

extern S16BIT mcx_Get_EnabledRts (U16BIT deviceId, U32BIT* rtsVector);

extern S16BIT mcx_Close (U16BIT deviceId);

extern S16BIT mcx_Element_DataBlock_Write (U16BIT deviceId, U16BIT element, U16BIT wDataBlock, U16BIT* buffer, U16BIT bufferSize);

extern S16BIT mcx_Element_DataBlock_Read (U16BIT deviceId, U16BIT wDataBlock, U16BIT* buffer, U16BIT bufferSize);
 
extern S16BIT mcx_Delete_BusList (U16BIT deviceId, U16BIT busList);

extern S16BIT mcx_Delete_BusList_Element (U16BIT deviceId, U16BIT element);

extern S16BIT mcx_Delete_Element_DataBlock (U16BIT deviceId, U16BIT dataBlock);

extern S16BIT mcx_UnMap_DataBlock_From_Element (U16BIT deviceId, U16BIT element, U16BIT dataBlock);

extern S16BIT mcx_UnMap_Element_From_BusList (U16BIT deviceId, U16BIT busList, U16BIT element);

//extern S16BIT mcx_Get_DataBlock_NumberOfWordsToRead (U16BIT element, U16BIT dataBlock, U16BIT* numWordsToRead);
//extern S16BIT mcx_Get_DataBlock_NumberOfWordsToWrite (U16BIT element, U16BIT dataBlock, U16BIT* numWordsToWrite);

extern S16BIT mcx_SetIntEnable (U16BIT deviceId, U16BIT interrupsEnabled);