Mil/lib/McxAPIWrapper.cs

using System;
using System.Collections.Generic;
using System.Text;
using System.Runtime.InteropServices;

namespace McxAPIUser
{
    public class McxAPIWrapper
    {
        public struct mcx_A429ChannelInfo
        {
            public System.UInt32 dwStructureSize;
            public System.UInt32 dwUserTag;
            // bitmask, see below
            public System.UInt32 dwFlags;
            public System.UInt32 dwTransferSize;
            public System.UInt32 dwCardNumber;

            public System.UInt32 dwReserved1;
            // Flags decode
            public bool channelIsAvailable
            {
                get { return ((dwFlags & 0x1) != 0); }
            }
            public bool channelRunning
            {
                get { return ((dwFlags & 0x2) != 0); }
            }
            public bool channelFailure
            {
                get { return ((dwFlags & 0x4) != 0); }
            }
            public bool channelIsTX
            {
                get { return ((dwFlags & 0x8) != 0); }
            }
            public bool channelIsHighSpeed
            {
                get { return ((dwFlags & 0x10) != 0); }
            }
            public bool channelSupportsTX
            {
                get { return ((dwFlags & 0x20) != 0); }
            }
            public bool channelSupportsRX
            {
                get { return ((dwFlags & 0x40) != 0); }
            }
            public bool channelSupportsHighSpeed
            {
                get { return ((dwFlags & 0x80) != 0); }
            }
            public bool channelSupportsLowSpeed
            {
                get { return ((dwFlags & 0x100) != 0); }
            }
        }
        public  struct mcx_MsgStruct
        {
            UInt16   cmd;        // command to be send or recieve
            UInt16[] data;       // data of the command
            UInt16   dataSize;   // data size
            UInt16[] BSW;        // bit status word
            UInt16[] rtStatus;   // command status
            bool     emulateRt;  // emulate rt flag
        }
        public  struct mcx_MsgFrameStruct
        {
            UInt16 deviceId;    // device id
            UInt16 FrameShots;  // how many times to send/recieve the frame (0 for endless loop)
            bool   FrameType;   // frame limit in micro seconds or times per second in Hz
            UInt16 FrameSpeed;  // frame limit value according to Frame type
            UInt16 BC_RT_Type;  // BC+RT or Multi RT
            bool   FrameNode;   // Gap mode or Rate mode
        }        

        // Following bits are same for TX and RX modes:
        public const System.UInt32 MCX_A429_CFG_HIGH_RATE   = 0x0001;  //< Data rate: 100 KHz
        public const System.UInt32 MCX_A429_CFG_LOW_RATE    = 0x0000;  //< Data rate: 12.5 KHz
        public const System.UInt32 MCX_A429_CFG_MASK_RATE   = 0x0001;
        public const System.UInt32 MCX_A429_CFG_PARITY_NONE = 0x0000;  //< Data parity: none. MSB can be used as data.
        public const System.UInt32 MCX_A429_CFG_PARITY_EVEN = 0x0002;  //< Data parity: even
        public const System.UInt32 MCX_A429_CFG_PARITY_ODD  = 0x0006;  //< Data parity: odd
        public const System.UInt32 MCX_A429_CFG_MASK_PARITY = 0x0006;  //   Mask for parity bits

        public const System.UInt32 MCX_A429_NUMBER_OF_WORDS_MASK = 0x00FF0000;  //   Number of words in FIFO mask - Bits 16-23
        public const System.UInt32 MCX_A429_FIFO_FULL = 0x01000000;  //   FIFO full
        public const System.UInt32 MCX_A429_FIFO_EMPTY = 0x02000000;  //   FIFO empty
        public const System.UInt32 MCX_A429_RX_LABEL_TABLE_READY = 0x04000000;  //   Labels table ready
        
        // Following bits apply only for RX mode:
        public const System.UInt32 MCX_A429_CFG_RX_LABEL_MATCH    = 0x0008;  //< enable label matching
        public const System.UInt32 MCX_A429_CFG_MASK_RX_LABELS    = 0x0008;
        public const System.UInt32 MCX_A429_CFG_RX_DECODER_ENABLE = 0x0010;
        public const System.UInt32 MCX_A429_CFG_RX_DECODER_DISABLE = 0x0000;
        public const System.UInt32 MCX_A429_CFG_MASK_RX_DECODER = 0x0070;

        public const System.UInt32 MCX_A429_CARD_DISABLE_INTERNAL_LOOPBACK = 0x00000000; // sets the card to disable internal loopback, external Arinc429 Tx Rx data is accepted
        public const System.UInt32 MCX_A429_CARD_ENABLE_INTERNAL_LOOPBACK = 0x00000001; // sets the card to enable internal loopback, external Arinc429 Tx Rx data is not accepted

        // Protocols for init / reload functions

        public const System.UInt32 MIL_STD_1553_AND_PP194 = 0x0000;
        public const System.UInt32 H009 = 0x0001;
        public const System.UInt32 MultiRT = 0x0002;
        public const System.UInt32 MIL_STD_1553 = 0x0004;
        public const System.UInt32 EBR_1553 = 0x0008;
        public const System.UInt32 DIGIBUS_F16 = 0x0016;

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_MapDevices(ref ushort numberOfDevices);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Initialize(uint deviceId, uint protocol);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_ReloadHW(uint deviceId, uint protocol);

        [DllImport("McxAPI.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetFpgaFileDirectory(uint deviceId, string fpgaFileDir);

        [DllImport("McxAPI.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_GetDescriptors(uint deviceId, StringBuilder deviceName, StringBuilder deviceManufacturer, StringBuilder deviceFirmware, StringBuilder deviceSerial);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Read(uint deviceId, uint address, ushort size, ref ushort buffer);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Write(uint deviceId, uint address, ushort size, ref ushort buffer);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Create_BusList(uint deviceId, uint busList);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Create_BusList_Element(uint deviceId, uint element, uint command, uint options, uint command2, uint StatusWord1, uint StatusWord2);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Create_BusList_Element1(uint deviceId, uint element, uint command, uint options);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Create_Element_DataBlock(uint deviceId, uint dataBlock, uint dataBlockMode, ref ushort buffer, ushort bufferSize);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Map_DataBlock_To_Element(uint deviceId, uint element, uint dataBlock);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Map_Element_To_BusList(uint deviceId, uint busList, uint element);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Start(uint deviceId, uint busList, uint numberOfIterations);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_Element_Results(uint deviceId, uint busList, uint elementIndex, ref uint blockStatusWord, ref ushort buffer, ushort bufferSize, ref ushort status1, ref ushort status2, ref ushort tag);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_DevicePassiveTimeStarted(uint deviceId, ref uint isFirstPassive);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetFrameTime(uint deviceId, uint microSeconds);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_EnableRts(uint deviceId, uint rtsVector);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_EnableRius(uint deviceId, ushort riusVector);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Free(uint deviceId);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_FreeBusList(uint deviceId, uint busList);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Close(uint deviceId);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Stop(uint deviceId);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Stop2(uint deviceId);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Element_DataBlock_Write(uint deviceId, uint element, uint wDataBlock, ref ushort buffer, uint bufferSize);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Element_DataBlock_Read(uint deviceId, uint element, uint wDataBlock, ref ushort buffer, ushort bufferSize);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Delete_BusList(uint deviceId, uint busList);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Delete_BusList_Element(uint deviceId, uint element);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Delete_Element_DataBlock(uint deviceId, uint dataBlock);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_UnMap_DataBlock_From_Element(uint deviceId, uint element, uint dataBlock);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_UnMap_Element_From_BusList(uint deviceId, uint busList, uint element);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_DataBlock_NumberOfWordsToRead(uint deviceId, uint element, uint dataBlock, ref ushort numWordsToRead);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_DataBlock_NumberOfWordsToWrite(uint deviceId, uint element, uint dataBlock, ref ushort numWordsToWrite);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_Version(uint deviceId, ref ushort version);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_Get_EnabledRts(uint deviceId, ref uint rtsVector);

        [DllImport("McxAPI.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern short mcx_SetIntEnable(uint deviceId, uint interrupsEnabled);
